--- a/config/user_config.ini
+++ b/config/user_config.ini
@@ -14,7 +14,7 @@ open_hotel_foodie = True
 # 开启 FOFA、ZoomEye 酒店源工作模式; 可选值: True, False | Enable FOFA, ZoomEye hotel source working mode; Optional values: True, False
 open_hotel_fofa = True
 # 开启保留所有检索结果，会保留非模板频道名称的结果，推荐手动维护时开启; 可选值: True, False | Enable to keep all search results, will keep the results of non-template channel names, it is recommended to enable when manually maintaining; Optional values: True, False
-open_keep_all = False
+open_keep_all = True
 # 开启转换生成 m3u 文件类型结果链接，支持显示频道图标; 可选值: True, False | Enable to convert and generate m3u file type result links, support display channel icons; Optional values: True, False
 open_m3u_result = True
 # 开启组播源功能，关闭后所有组播源工作模式都将关闭; 可选值: True, False | Enable multicast source function, after closing, all multicast source working modes will be closed; Optional values: True, False
@@ -42,7 +42,7 @@ open_update = True
 # 开启显示更新时间; 可选值: True, False | Enable display update time; Optional values: True, False
 open_update_time = True
 # 开启显示接口说明信息，用于控制是否显示接口来源、分辨率、协议类型等信息，为$符号后的内容，播放软件使用该信息对接口进行描述，若部分播放器（如PotPlayer）不支持解析导致无法播放可关闭; 可选值: True, False | Enable to display interface description information, used to control whether to display interface source, resolution, protocol type and other information, the content after the $ symbol, the playback software uses this information to describe the interface, if some players (such as PotPlayer) do not support parsing and cannot play, you can turn it off; Optional values: True, False
-open_url_info = False
+open_url_info = True
 # 开启使用本地缓存数据，适用于查询请求失败场景（仅针对酒店源与组播源）; 可选值: True, False | Enable to use local cached data, suitable for query request failure scenarios (only for hotel source and multicast source); Optional values: True, False
 open_use_cache = True
 # 开启使用历史更新结果（包含模板与结果文件的接口），合并至本次更新中; 可选值: True, False | Enable to use historical update results (including interfaces of templates and result files), merged into this update; Optional values: True, False
